--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,9 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <string-array name="categorynames">
+        <item>Income</item>
+        <item>Expense</item>
+    </string-array>
 
 </resources>
